--- a/public/index.html
+++ b/public/index.html
@@ -3,168 +3,61 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CurseForge Trends - Mods Minecraft</title>
-    <style>
-        /* ✅ Style global */
-        body {
-            font-family: "Poppins", Arial, sans-serif;
-            text-align: center;
-            background-color: #121212;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-
-        h1 {
-            color: #4CAF50;
-            margin: 20px 0;
-        }
-
-        /* ✅ Barre de recherche */
-        .search-bar {
-            margin: 15px auto;
-            width: 80%;
-            max-width: 400px;
-        }
-
-        .search-bar input {
-            width: 100%;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid #4CAF50;
-            outline: none;
-            font-size: 14px;
-        }
-
-        /* ✅ Conteneur des mods */
-        .mods-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 15px;
-            padding: 20px;
-        }
-
-        /* ✅ Carte pour chaque mod */
-        .mod-card {
-            background-color: #1e1e1e;
-            width: 280px;
-            border-radius: 10px;
-            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
-            overflow: hidden;
-            text-align: left;
-            transition: transform 0.2s, box-shadow 0.2s;
-        }
-
-        .mod-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0px 6px 12px rgba(0, 255, 128, 0.4);
-        }
-
-        /* ✅ Image du mod */
-        .mod-card img {
-            width: 100%;
-            height: 160px;
-            object-fit: cover;
-            border-bottom: 2px solid #4CAF50;
-        }
-
-        /* ✅ Contenu de la carte */
-        .mod-content {
-            padding: 10px;
-        }
-
-        /* ✅ Titre du mod */
-        .mod-title {
-            font-size: 16px;
-            font-weight: bold;
-            color: #4CAF50;
-            text-decoration: none;
-            display: block;
-            margin-bottom: 5px;
-        }
-
-        .mod-title:hover {
-            text-decoration: underline;
-        }
-
-        /* ✅ Description */
-        .mod-description {
-            font-size: 12px;
-            color: #bbbbbb;
-            margin-bottom: 10px;
-            height: 40px;
-            overflow: hidden;
-            text-overflow: ellipsis;
-        }
-
-        /* ✅ Infos téléchargements et date */
-        .mod-info {
-            font-size: 12px;
-            display: flex;
-            justify-content: space-between;
-            color: #dddddd;
-            opacity: 0.8;
-        }
-
-    </style>
-
-    <script>
-        let modsData = [];
-
-        async function fetchData() {
-            try {
-                let response = await fetch(`http://localhost:3000/mods`);
-                let data = await response.json();
-                modsData = data.data;
-                displayMods(modsData);
-            } catch (error) {
-                console.error("Erreur API:", error);
-            }
-        }
-
-        function displayMods(mods) {
-            let container = document.getElementById("modsContainer");
-            container.innerHTML = "";
-
-            mods.forEach(mod => {
-                let modCard = document.createElement("div");
-                modCard.classList.add("mod-card");
-                modCard.innerHTML = `
-                    <a href="${mod.url}" target="_blank">
-                        <img src="${mod.image}" alt="${mod.title}">
-                    </a>
-                    <div class="mod-content">
-                        <a class="mod-title" href="${mod.url}" target="_blank">${mod.title}</a>
-                        <p class="mod-description">${mod.description}</p>
-                        <div class="mod-info">
-                            <span>📥 ${mod.downloads} téléchargements</span>
-                            <span>📅 ${mod.date}</span>
-                        </div>
-                    </div>
-                `;
-                container.appendChild(modCard);
-            });
-        }
-
-        function searchMods() {
-            let query = document.getElementById("searchInput").value.toLowerCase();
-            let filteredMods = modsData.filter(mod => mod.title.toLowerCase().includes(query));
-            displayMods(filteredMods);
-        }
-
-        document.addEventListener("DOMContentLoaded", fetchData);
-    </script>
-
+    <title>CurseForge Trends - Mods & Maps</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- Icons -->
 </head>
 <body>
-<h1>🔥 Top 10 Mods Minecraft (2 dernières semaines)</h1>
 
-<!-- ✅ Barre de recherche -->
-<div class="search-bar">
-    <input type="text" id="searchInput" onkeyup="searchMods()" placeholder="Rechercher un mod...">
+<!-- 🌍 Navbar -->
+<div class="navbar">
+    <button id="mods" class="active" onclick="switchCategory('mods')">Mods</button>
+    <button id="maps" onclick="switchCategory('maps')">Maps</button>
 </div>
 
-<div class="mods-container" id="modsContainer">Chargement...</div>
+<!-- 🔥 Titre -->
+<h1><i class="fas fa-fire"></i> CurseForge Trends</h1>
+
+<!-- 📌 Mods / Maps List -->
+<ul id="modsList">Chargement...</ul>
+
+<script>
+    async function fetchData(category) {
+        try {
+            let response = await fetch(`http://localhost:3000/data`);
+            let data = await response.json();
+            let list = document.getElementById("modsList");
+            list.innerHTML = "";
+
+            let items = category === 'mods' ? data.mods.all : data.maps.all;
+            items.forEach(item => {
+                let li = document.createElement("li");
+                li.innerHTML = `
+    <a href="${item.url}" target="_blank">
+        <img src="${item.image}" alt="${item.title}">
+        <div class="card-title">${item.title}</div>
+        <div class="card-info">
+            <span class="downloads"><i class="fas fa-download"></i> ${item.downloads} téléchargements</span> <br>
+            <i class="fas fa-clock"></i> ${item.timeAgo} |
+            <i class="fas fa-file-alt"></i> Page ${item.page}
+        </div>
+    </a>`;
+
+                list.appendChild(li);
+            });
+        } catch (error) {
+            console.error("Erreur API:", error);
+        }
+    }
+
+    function switchCategory(category) {
+        document.querySelectorAll('.navbar button').forEach(btn => btn.classList.remove('active'));
+        document.getElementById(category).classList.add('active');
+        fetchData(category);
+    }
+
+    document.addEventListener("DOMContentLoaded", () => fetchData('mods'));
+</script>
+
 </body>
 </html>
